<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_poster"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:src="@android:color/darker_gray" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="313dp"
        android:layout_height="79dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_poster"
        android:layout_toRightOf="@id/img_poster"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_release"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:textSize="12sp"
            tools:text="@string/txt_release" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_release"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/movies_name" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>